Restructured project files, mainly to separate most of the visual effect logic and to put the cities array into a /data directory. Fixed current hour glow not showing on page load initially.

--- a/style.css
+++ b/style.css
@@ -30,10 +30,4 @@ footer {
 
 .card {
     width: 10rem;
-    border: 0.15rem solid black;
-}
-
-.card:hover, .current-hour {
-    border: 0.15rem solid white;
-    filter: drop-shadow(0 0 1rem white);
 }
